force-app/main/default/objects/MDR_Data_Element_Source__c/MDR_Data_Element_Source__c.object-meta.xml
<CustomObject>
    <label>Data Element Source</label>
    <nameField>
        <label>Data Element Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Element Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>