force-app/main/default/objects/MDR_Data_Element_Source__c/fields/Date_Expression__c.field-meta.xml
<CustomField>
    <fullName>Date_Expression__c</fullName>
    <label>Date Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>