force-app/main/default/objects/MDR_Data_Element_Source__c/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <label>Date Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>