force-app/main/default/objects/MDR_Data_Element_Source__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>