force-app/main/default/objects/MDR_Data_Element_Source__c/fields/Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Id_Field__c</fullName>
    <label>Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>