force-app/main/default/objects/MDR_Data_Element_Source__c/fields/Link_Expression__c.field-meta.xml
<CustomField>
    <fullName>Link_Expression__c</fullName>
    <label>Link Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>