force-app/main/default/objects/MDR_Data_Element_Source__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPASS</fullName>
            </value>
            <value>
                <fullName>CRMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>