force-app/main/default/objects/MDR_Data_Element_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>Date_Field__c</columns>
    <columns>Date_Expression__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>